RESOLVED FIXED216665
[macOS Big Sur] ASSERTION FAILED: !m_gamepadMap.get(device)./platform/gamepad/mac/HIDGamepadProvider.mm(233) under WebCore::HIDGamepadProvider::deviceAdded
https://bugs.webkit.org/show_bug.cgi?id=216665
Summary [macOS Big Sur] ASSERTION FAILED: !m_gamepadMap.get(device)./platform/gamepad...
Chris Dumez
Reported 2020-09-17 14:11:06 PDT
[macOS Big Sur] ASSERTION FAILED: !m_gamepadMap.get(device)./platform/gamepad/mac/HIDGamepadProvider.mm(233) under WebCore::HIDGamepadProvider::deviceAdded: TestWebKitAPI.Gamepad.GCFVersusHID ASSERTION FAILED: !m_gamepadMap.get(device) ./platform/gamepad/mac/HIDGamepadProvider.mm(233) : void WebCore::HIDGamepadProvider::deviceAdded(IOHIDDeviceRef) 1 0x10f4d17d9 WTFCrash 2 0x13ae48ceb WTFCrashWithInfo(int, char const*, char const*, int) 3 0x13c8d5ba2 WebCore::HIDGamepadProvider::deviceAdded(__IOHIDDevice*) 4 0x13c8d536c WebCore::deviceAddedCallback(void*, int, void*, __IOHIDDevice*) 5 0x7fff22b510ee __IOHIDManagerDeviceApplier 6 0x7fff203fce6e __CFSetApplyFunction_block_invoke 7 0x7fff203fcce1 CFBasicHashApply 8 0x7fff203fcc2c CFSetApplyFunction 9 0x7fff22b4fb5a __ApplyToDevices 10 0x7fff22b5133e __IOHIDManagerInitialEnumCallback 11 0x7fff204338bd __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 12 0x7fff20433825 __CFRunLoopDoSource0 13 0x7fff20433607 __CFRunLoopDoSources0 14 0x7fff20431fed __CFRunLoopRun 15 0x7fff20431582 CFRunLoopRunSpecific 16 0x7fff20bd2251 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 17 0x7fff20c5ba44 -[NSRunLoop(NSRunLoop) runUntilDate:] 18 0x10343dd7b TestWebKitAPI::Util::sleep(double) 19 0x102f947f6 TestWebKitAPI::Gamepad_GCFVersusHID_Test::TestBody() 20 0x1035f3c94 void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 21 0x1035c40eb void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 22 0x1035c4026 testing::Test::Run() 23 0x1035c517a testing::TestInfo::Run() 24 0x1035c5fc4 testing::TestCase::Run() 25 0x1035d1628 testing::internal::UnitTestImpl::RunAllTests() 26 0x1035f9014 bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 27 0x1035d111b bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 28 0x1035d0fed testing::UnitTest::Run() 29 0x1033dedd1 RUN_ALL_TESTS() 30 0x1033ded62 TestWebKitAPI::TestsController::run(int, char**) 31 0x103592679 main
Attachments
Patch (2.02 KB, patch)
2020-09-17 14:16 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-09-17 14:11:17 PDT
Chris Dumez
Comment 2 2020-09-17 14:16:23 PDT
EWS
Comment 3 2020-09-18 09:43:43 PDT
Committed r267241: <https://trac.webkit.org/changeset/267241> All reviewed patches have been landed. Closing bug and clearing flags on attachment 409065 [details].
Note You need to log in before you can comment on or make changes to this bug.